2005-12-10  Per Bothner  <per@bothner.com>

	* InPort.java (uriSchemeLength): Moved from BaseUri.java.
	(uriSchemeSpecified): Moved hasScheme from BaseUri.java and renamed.
	(openFile): Open using URLConnection if uriSchemeSpecified.

2005-12-08  Per Bothner  <per@bothner.com>

	* WrongType.java: New constructors for use by CheckedTarget.
	(getMessage): Better handling of ARG_VARNAME.

2005-11-15  Per Bothner  <per@bothner.com>

	* CharArrayOutPort.java (close): New method - does nothing.

2005-11-03  Per Bothner  <per@bothner.com>

	* OutPort.java (beginAttribute, endAttribute): Call corresponding
	method 	of objectFormat if non-null.
	* OutPort.java (bout): Make protected, for ReplSession.java.

	* OutPort.java (prev): Remove never-read field.
	(WORD): Remove unused constant.
	(startWord): Remove needless method.
	(write(int), write(char[],int,int), write(String), print)char)):
	Remove now-pointless method overrides.

2005-10-19  Per Bothner  <per@bothner.com>

	* WrongArguments.java (checkArgCount): Check for a null procedure name.

2005-10-17  Per Bothner  <per@bothner.com>

	* TtyInPort.java (prompter, promtEmitted): Make protected, so
	gnu.kawa.servlet.OutBufferWriter (in ReplSession.java) can access them.

2005-09-27  Per Bothner  <per@bothner.com>

	* CallContext.java (getBaseUriDefault): Use File.toURI().toString(),
	if use:java.net.URI is set - i.e. for JDK 1.4 or higher.

	* Future.java (waitForResult): Specify throws Throwable
	so we don't have to wrap an exception.

	* RunnableClosure.java (getResult): New method.

2005-09-26  Per Bothner  <per@bothner.com>

	* Environment.java (remove, unlink): New methods.
	* Location.java (undefine): New method.
	* SimpleEnvironment.java (remove): Rename to unlink, which takes hash.
	Don't undefine location - do that in remove.
	* ThreadLocation.java (LocationRef.finalize): Just unlink - don't
	undefine the location.

2005-09-25  Per Bothner  <per@bothner.com>
